force-app/main/default/objects/Donation_Location__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Active donation location. If active, this location is shown on the web site.</description>
    <inlineHelpText>Active donation location. If active, this location is shown on the web site.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>