force-app/main/default/objects/Donation_Location__c/fields/Donation_Location_Details__c.field-meta.xml
<CustomField>
    <fullName>Donation_Location_Details__c</fullName>
    <inlineHelpText>Ex. west side of garage</inlineHelpText>
    <label>Donation Location Details</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>