force-app/main/default/objects/Donation_Location__c/fields/Location_Contact__c.field-meta.xml
<CustomField>
    <fullName>Location_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Location Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Donation Locations</relationshipLabel>
    <relationshipName>Donation_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>