force-app/main/default/objects/Donation_Location__c/fields/Map_Link__c.field-meta.xml
<CustomField>
    <fullName>Map_Link__c</fullName>
    <description>Link to address on Google Maps</description>
    <formula>HYPERLINK(&quot;https://maps.google.com/maps?q=&quot; &amp; Street_Address__c &amp; &#39;,+&#39; &amp; City__c &amp; &#39;,+&#39; &amp; TEXT(State__c) &amp; &#39;,+&#39; &amp; Zip_Code__c ,&quot;View Map&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Link to address on Google Maps</inlineHelpText>
    <label>Map</label>
    <type>Text</type>
</CustomField>