force-app/main/default/objects/Donation_Location__c/fields/Map_URL__c.field-meta.xml
<CustomField>
    <fullName>Map_URL__c</fullName>
    <description>URL to address on Google Maps</description>
    <formula>SUBSTITUTE(&quot;https://maps.google.com/maps?q=&quot; &amp; Street_Address__c &amp; &quot;,+&quot; &amp; City__c &amp; &quot;,+&quot; &amp; TEXT(State__c) &amp; &quot;,+&quot; &amp; Zip_Code__c, &quot; &quot;, &quot;%20&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Map URL</label>
    <type>Text</type>
</CustomField>